src/objects/Rule_Combination__c/Rule_Combination__c.object-meta.xml
<CustomObject>
    <label>Rule Combination</label>
    <nameField>
        <displayFormat>EXPR-{0000}</displayFormat>
        <label>Rule Combination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Combinations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>