src/objects/Rule_Combination__c/fields/Rule_Combination__c.field-meta.xml
<CustomField>
    <fullName>Rule_Combination__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Combination</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>