src/objects/Rule_Combination__c/fields/Rule_Combination_Description__c.field-meta.xml
<CustomField>
    <fullName>Rule_Combination_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Combination Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>