src/objects/Rule_Combination__c/fields/Rule_combination_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_combination_Ext_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule combination Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>