src/objects/Rule_Combination__c/fields/Rule_Combination_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Rule_Combination_Formatted__c</fullName>
    <description>Rule Combination with HTML tags for highlighting operators.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Combination Formatted</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>