src/objects/Rule_Combination__c/fields/Rule_Combination_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Combination_Key__c</fullName>
    <description>Rule Combination unique key generated with encryption of Rule Combination field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Combination Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>