src/objects/Rule_Combination__c/fields/Rule_Combination_With_Exp__c.field-meta.xml
<CustomField>
    <fullName>Rule_Combination_With_Exp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Combination With Exp</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>