src/objects/Rule_Combination__c/fields/Rule_ICD__c.field-meta.xml
<CustomField>
    <fullName>Rule_ICD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule ICD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>