src/objects/Rule_Combination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Rule_combination_Ext_Id__c</columns>
    <columns>Rule_Combination_Key__c</columns>
    <columns>Rule_Combination__c</columns>
    <columns>Rule_Combination_Description__c</columns>
    <columns>Rule_Combination_Formatted__c</columns>
    <columns>Rule_ICD__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>