src/objects/Rule_Combination__c/listViews/All_Combinations.listView-meta.xml
<ListView>
    <fullName>All_Combinations</fullName>
    <columns>NAME</columns>
    <columns>Rule_Combination__c</columns>
    <columns>Gender__c</columns>
    <columns>Rule_Diagnosis__c</columns>
    <columns>Rule_ICD__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Rule_combination_Ext_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Combinations</label>
</ListView>